Drag & maximize to another monitor places window incorrectly (Windows)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 21
    • Affects Version/s: 11, 17, 19
    • Component/s: client-libs
    • None
    • b17
    • windows_10

      Windows 11 allows to drag window to the top of the screen to maximize it.
      If you drag & maximize window to a monitor with different DPI, window is placed with offset, caption and client area are visually misaligned.

      First reported here: https://youtrack.jetbrains.com/issue/JBR-5238

            Assignee:
            Nikita Gubarkov
            Reporter:
            Nikita Gubarkov
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: