8301616: Drag & maximize to another monitor places window incorrectly (Windows)